/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.graalvm.nativeimage:svm:21.3.0'
    // Use JUnit test framework.
    testImplementation libs.junit
    implementation("org.openjdk.jmh:jmh-core:1.36")
    annotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.36")
    // This dependency is used by the application.
    implementation libs.guava
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'io.github.gmodena.simd.Runner'
}

compileJava {
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
    options.fork = true
    options.forkOptions.jvmArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

test {
    jvmArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

run {
    jvmArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}
